Updated appStyle for IE scrollbar fix.

--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -18,8 +18,7 @@ body{
 	height:100%;
 	overflow-x:hidden;
 }
-html:not([buildfire='enabled']),
-html:not([buildfire='enabled']) body){
+html:not([buildfire='enabled']){
 	overflow:hidden;
 }
 ::-webkit-scrollbar{
@@ -35,6 +34,7 @@ iframe{
 	border:none;
 	outline:none;
 	width:100%;
+	display:block;
 }
 ul,
 ol{
